terraform-local/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

provider "aws" {
  region                      = var.aws_region
  access_key                  = "test"
  secret_key                  = "test"
  
  # Necessário para o LocalStack
  skip_credentials_validation = true
  skip_requesting_account_id  = true
  skip_metadata_api_check     = true
  s3_use_path_style           = true

  endpoints {
    ec2 = "http://localhost:4566"
  }
}

resource "aws_security_group" "api_sg" {
  name        = "api_sg_local"
  description = "Allow HTTP and SSH inbound traffic"

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "API Port"
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "app_server" {
  ami           = "ami-00000000000000000" # AMI Mock para LocalStack
  instance_type = "t2.micro"
  
  vpc_security_group_ids = [aws_security_group.api_sg.id]

  tags = {
    Name = "DevOpsChallengeAppServerLocal"
  }
}

output "instance_public_ip" {
  description = "Public IP address da EC2 fake gerada pelo LocalStack"
  value       = aws_instance.app_server.public_ip
}
